--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yufield.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yufield.github.io",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
